# sauce-nao-rs

./: .gitignore  Cargo.toml  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: Doc.yml  Rust.yml  Rust1.yml  rust.yml
implementors/argh/: trait.FromArgs.js  trait.SubCommand.js  trait.SubCommands.js  trait.TopLevelCommand.js
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/core/str/traits/: trait.FromStr.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
sauce-nao/: Cargo.toml
sauce-nao-cli/: Cargo.toml
sauce-nao-cli/src/: main.rs
sauce-nao/src/: client.rs  image.rs  lib.rs  types.rs
sauce-nao/src/types/: response.rs  search_json.rs
sauce-nao/src/types/response/: error.rs  ok.rs
sauce_nao/: all.html  enum.ApiResponse.html  enum.Creator.html  enum.Error.html  enum.Image.html  index.html  sidebar-items.js  struct.Client.html  struct.ErrorResponse.html  struct.OkResponse.html  struct.ResultEntry.html
sauce_nao/client/: index.html  sidebar-items.js  struct.Client.html
sauce_nao/image/: enum.Image.html  index.html  sidebar-items.js
sauce_nao/types/: index.html  sidebar-items.js  struct.ApiError.html  struct.ApiErrorHeaderPayload.html  struct.ApiResponseHeader.html
sauce_nao/types/response/: enum.ApiResponse.html
sauce_nao/types/response/error/: struct.ErrorResponse.html
sauce_nao/types/response/ok/: struct.OkResponse.html
sauce_nao/types/response/ok/result_entry/: enum.Creator.html  struct.ResultEntry.html
sauce_nao/types/search_json/: index.html  sidebar-items.js  struct.HeaderPayload.html  struct.IndexEntry.html  struct.SearchJson.html
sauce_nao/types/search_json/result_entry/: enum.Creator.html  index.html  sidebar-items.js  struct.Data.html  struct.Header.html  struct.ResultEntry.html
sauce_nao_cli/: all.html  enum.OutputFormat.html  enum.SubCommand.html  fn.async_main.html  fn.main.html  index.html  sidebar-items.js  struct.Config.html  struct.LoginOptions.html  struct.Options.html  struct.SearchOptions.html
src/: client.rs  lib.rs  main.rs  types.rs
src/sauce_nao/: client.rs.html  image.rs.html  lib.rs.html  types.rs.html
src/sauce_nao/types/: response.rs.html  search_json.rs.html
src/sauce_nao/types/response/: error.rs.html  ok.rs.html
src/sauce_nao/types/response/ok/: result_entry.rs.html
src/sauce_nao/types/search_json/: result_entry.rs.html
src/sauce_nao_cli/: main.rs.html
src/types/: search_json.rs
src/types/search_json/: result_entry.rs
