[package]
name = "sauce-nao"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "sauce-nao"
path = "src/main.rs"
required-features = [ "cli" ]

[dependencies]
itoa = "1.0.6"
reqwest = { version = "0.11.16", default-features = false, features = [ "json", "stream", "multipart" ] }
serde = { version = "1.0.158", features = [ "derive" ] }
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = [ "fs" ] }
tokio-util = { version = "0.7.7", features = ["codec"] }
url = { version = "2.3.1", features = [ "serde" ] }

# Optional
anyhow = { version = "1.0.70", optional = true }
argh = { version = "0.1.10", optional = true }
dirs-next = { version = "2.0.0", optional = true }
toml = { version = "0.7.3", optional = true }

[dev-dependencies]
tokio = { version = "1.26.0", features = [ "macros" ] }

[features]
default = [ "reqwest/default-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]

cli = [ 
    "anyhow", 
    "argh",  
    "dirs-next",
    "tokio/rt-multi-thread",
    "toml",
]
