[package]
name = "sauce-nao"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "sauce-nao"
path = "src/main.rs"
required-features = [ "cli" ]

[dependencies]
itoa = "1.0.9"
reqwest = { version = "0.11.20", default-features = false, features = [ "json", "stream", "multipart" ] }
serde = { version = "1.0.188", features = [ "derive" ] }
serde_json = "1.0.107"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = [ "fs" ] }
tokio-util = { version = "0.7.8", features = ["codec"] }
url = { version = "2.4.1", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.32.0", features = [ "macros" ] }

[features]
default = [ "reqwest/default-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]

[workspace]
resolver = "2"
members = [
    "sauce-nao-cli",
]

[profile.release]
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"
lto = "fat"
