[package]
name = "sauce-nao"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
itoa = "1.0.9"
reqwest = { version = "0.11.22", default-features = false, features = [ "json", "stream", "multipart" ] }
serde = { version = "1.0.193", features = [ "derive" ] }
serde_json = "1.0.108"
thiserror = "1.0.53"
tokio = { version = "1.34.0", features = [ "fs" ] }
tokio-util = { version = "0.7.10", features = ["codec"] }
url = { version = "2.4.1", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.34.0", features = [ "macros" ] }

[features]
default = [ "reqwest/default-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
